fix: cors for production